# ui-blueprint

./: README.md  analyze_images.py  pyproject.toml  run.py
.github/: mode_engine_contract.yml
.github/workflows/: ci.yml
android/: local.properties  local.properties.example
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
app/core/: config.py  types.py
app/index/: keyword_index.py  retriever.py  vector_store.py
app/ingest/: chunker.py  metadata.py  parser.py
app/query/: executor.py  prompt_builder.py  response_formatter.py
app/validation/: rules.py  validator.py
backend/: README.md  entrypoint.sh  requirements.txt
backend/alembic/versions/: 0004_analyze_pipeline_checkpoint.py  0005_analyze_options.py  0006_segment_pipeline.py  (+6 more)
backend/app/: chat_routes.py  domain_routes.py  folder_routes.py  main.py  mode_engine.py  models.py  ops_routes.py  repo_chunking.py  storage.py  tool_routes.py  web_search.py  worker.py
backend/tests/: test_analyze_pipeline.py  test_api.py  test_audio_upload.py  test_chat_upgrades.py  test_domain_api.py  test_duplicate_artifacts.py  test_folder_routes.py  test_intent_pack.py  test_interaction_layer_v2.py  test_worker_audio.py
interface/: api.py  cli.py
prompts/: query.txt  system.txt  validator.txt
schema/: blueprint.schema.json
tests/: test_domain.py  test_extractor.py  test_ingestion.py  test_query.py  test_validation.py
ui_blueprint/: __main__.py  extractor.py  intent_pack.py  preview.py
ui_blueprint/domain/: __init__.py  compiler.py  derivation.py  ir.py  openai_provider.py  store.py
(+59 files in other folders)
