[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-blueprint"
version = "0.1.0"
description = "Convert 10-second Android screen-recording clips into structured UI blueprints."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
video = [
    "imageio[ffmpeg]>=2.37.3",
]
cv = [
    "opencv-python>=4.8",
]
dev = [
    "imageio[ffmpeg]>=2.37.3",
    "jsonschema>=4.20",
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
ui-blueprint = "ui_blueprint.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ui_blueprint*", "app*", "interface*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
